@@ -5,6 +5,13 @@ Please make entries to this log (in addition to the CVS log) that describe
 major changes to the OpenSLP code base.  An entries should be separated by
 blank lines and include the date, developer's email, and change description.
 =============================================================================
+02/22/02 matt@caldera.com
+Added fix from Arun Barboza to make V1 DAAdverts use the same encoding as
+the request
+
+02/22/02 matt@caldera.com
+Added patch from Arun Barboza to handle "==" V1 predicates.  This allows
+OpenSLP to be useful in servicing request in Novell NetWare environments.
 
 02/13/02 matt@caldera.com
 Added PID monitoring.  Now when the process that called SLPReg() (with
